# Life

./: CMakeLists.txt  CMakeLists.txt.user.72416d5  ConsoleLifeTest.cpp  ConsoleLifeTest.h  README.md  life.sln  main.cpp
life/: Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  Colony.cpp  Colony.h  Evolution.cpp  Evolution.h  Exception.h  Structures.h  life.cpp  life.vcxproj  life.vcxproj.filters
